# ratecraft

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  conda-packages.txt  pyproject.toml
ratecraft/: __init__.py  bond.py  duration.py  yieldcurve.py
ratecraft/data/: duration_config.yaml
tests/: test_bond.py  test_duration.py
